# CDFpp

./: .bumpversion.cfg  .cirrus.yml  .gitignore  .gitpod.yml  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  COPYING  README.md  build_wheel.py  config.h.in  environment.yml  meson.build  meson_options.txt  pyproject.toml  setup.py
.github/workflows/: CI.yml  ccpp.yml  gh-pages.yml  pythonpublish-linux.yml  pythonpublish-osx.yml  pythonpublish-win.yml  pythonpublish.yml  tests-linux.yml  tests-osx.yml  tests-windows.yml  tests-with-coverage.yml  tests.yml
.theia/: settings.json
benchmarks/: meson.build
benchmarks/chrono/: main.cpp
benchmarks/file_reader/: main.cpp
benchmarks/rle/: main.cpp
cmake/: pybind11.cmake
docs/: Makefile  authors.rst  conf.py  contributing.rst  history.rst  index.rst  installation.rst  meson.build  requirements.txt
docs/examples/: CDF_loading.ipynb  Creating_CDF.ipynb  Loading_CDF.ipynb  index.rst
docs/superpowers/plans/: 2026-06-18-wasm-demo-phase1-uxfoundation.md  2026-06-18-wasm-demo-phase2-plotting.md  2026-06-19-cdf-compare.md  2026-06-19-wasm-demo-spectrogram-axes.md  2026-06-19-wasm-demo-validate-astralint-stage2.md  2026-06-19-wasm-demo-validate-astralint.md
docs/superpowers/specs/: 2026-06-18-wasm-demo-app-design.md  2026-06-18-wasm-demo-phase2-plotting-design.md  2026-06-19-cdf-compare-design.md  2026-06-19-reverse-handoff-open-in-explorer.md  2026-06-19-wasm-demo-spectrogram-axes-design.md  2026-06-19-wasm-demo-validate-astralint-design.md  2026-06-23-pds4-cdf-introspection.md
examples/basic_cpp/: main.cpp
examples/notebooks/: Demo.ipynb
include/: attribute.hpp  cdf-chrono-constants.hpp  cdf-chrono.hpp  cdf-data.hpp  cdf-debug.hpp  cdf-desc-records.hpp  cdf-endianness.hpp  cdf-enums.hpp  cdf-file.hpp  cdf-io.hpp  cdf-leap-seconds.h  cdf-majority-swap.hpp  cdf.hpp  variable.hpp
include/cdf-io/: cdf-io-attribute.hpp  cdf-io-buffers.hpp  cdf-io-common.hpp  cdf-io-desc-records.hpp  cdf-io-variable.hpp  cdf-io-zlib.hpp  cdf-io.hpp
include/cdfpp/: attribute.hpp  cdf-data.hpp  cdf-debug.hpp  cdf-endianness.hpp  cdf-enums.hpp  cdf-file.hpp  cdf-helpers.hpp  cdf-majority-swap.hpp  cdf-map.hpp  cdf-repr.hpp  cdf.hpp  no_init_vector.hpp  nomap.hpp  variable.hpp
include/cdfpp/cdf-io/: cdf-io-attribute.hpp  cdf-io-buffers.hpp  cdf-io-common.hpp  cdf-io-decompression.hpp  cdf-io-desc-records.hpp  cdf-io-libdeflate.hpp  cdf-io-loading.hpp  cdf-io-rle.hpp  cdf-io-special-fields.hpp  cdf-io-variable.hpp  cdf-io-zlib.hpp  cdf-io.hpp  common.hpp  compression.hpp  decompression.hpp  desc-records.hpp  endianness.hpp  libdeflate.hpp  majority-swap.hpp  reflection.hpp  rle.hpp  special-fields.hpp  zlib.hpp  zstd.hpp
include/cdfpp/cdf-io/loading/: attribute.hpp  buffers.hpp  loading.hpp  records-loading.hpp  variable.hpp
include/cdfpp/cdf-io/saving/: buffers.hpp  create_records.hpp  layout_records.hpp  link_records.hpp  records-saving.hpp  saving.hpp
include/cdfpp/chrono/: cdf-chrono-constants.hpp  cdf-chrono-impl.hpp  cdf-chrono.hpp  cdf-leap-seconds.h
include/cdfpp/vectorized/: cdf-chrono-impl.hpp  cdf-chrono.hpp
include/chrono/: cdf-chrono-constants.hpp  cdf-chrono.hpp  cdf-leap-seconds.h
notebooks/: CDA_Masters.ipynb  Leap_seconds.ipynb  TT2000_tests.ipynb  TimeConvBenchmarksAnalysis.ipynb  benchmarks.ipynb  chrono_test_table_gen.ipynb
pycdfpp/: __init__.py  attribute.hpp  buffers.hpp  cdf.hpp  chrono.hpp  collections.hpp  data_types.hpp  enums.hpp  meson.build  pycdfpp.cpp  repr.hpp  variable.hpp
scripts/: CDF.hexpat  build_wheel.py  chrono_profiling.py  version.py
simd/: meson.build
src/arch/x86/: chrono.cpp  chrono_arch.cpp
subprojects/: catch2.wrap  google-benchmark.wrap  hedley.wrap  hinnant-date.wrap  libdeflate.wrap  pybind11.wrap  xsimd.wrap
tests/: meson.build
tests/chrono/: main.cpp  test_values.hpp
tests/endianness/: main.cpp
tests/full_corpus/: test.py  test_full_corpus.py
tests/libdeflate_compression/: main.cpp
tests/majority/: main.cpp
tests/manual_load/: main.cpp
tests/manual_save/: main.cpp
tests/nomap/: main.cpp
tests/python_chrono/: test.py
tests/python_loading/: test.py
tests/python_saving/: test.py
tests/python_skeletons/: test.py
tests/python_structural_introspection/: test.py
tests/python_variable_set_values/: test.py
tests/python_windows_crash/: test.py
tests/python_wrapper/: test.py  test_corpus.py
tests/python_wrapper_cpp/: main.cpp
tests/records_loading/: main.cpp
tests/records_saving/: main.cpp
tests/resources/: a_cdf.cdf  a_cdf_with_compressed_vars.cdf  a_col_major_cdf.cdf  a_compressed_cdf.cdf  a_rle_compressed_cdf.cdf  ac_h0_mfi_00000000_v01.cdf  ac_h2_sis_20101105_v06.cdf  contiguous.cdf  fragmented.cdf  ge_k0_cpi_19921231_v02.cdf  ia_k0_epi_19970102_v01.cdf  make_cdf.py  make_cdf_epoch.py  make_cdf_tt2000.py  make_structural_fixtures.c  not_a_cdf.cdf  rvariable.cdf  solo_l2_rpw-lfr-surv-swf-e_00000000_v01.cdf  thg_l2_mag_mek_00000000_v01.cdf  uy_proton-distributions_swoops_00000000_v01.cdf  wi_l2-30min_sms-stics-afm-magnetosphere_00000000_v01.cdf
tests/rle_compression/: main.cpp
tests/simple_open/: main.cpp
tests/simple_save/: main.cpp
tests/structural_introspection/: main.cpp
tests/wacdfpp_astralint/: test.mjs
tests/wacdfpp_diff/: test.mjs
tests/wacdfpp_format/: test.mjs
tests/wacdfpp_model/: test.mjs
tests/wacdfpp_plot/: test.mjs
tests/wacdfpp_yaml/: test.mjs
tests/wasm_attr_detach/: test.mjs
tests/wasm_save_roundtrip/: test.mjs
tests/wasm_time_attrs/: test.mjs
tests/wasm_time_conversion/: test.mjs
tests/zlib/: main.cpp
tests/zlib_compression/: main.cpp
tests/zstd_compression/: main.cpp
wacdfpp/: app.js  astralint.js  cdf-diff.js  cdf-model.js  cdf-yaml.js  cdfpp.d.ts  compare.js  meson.build  plot-model.js  plot.js  render.js  spectrogram.js  wacdfpp.cpp  wacdfpp.html  wasm.js  wasm.txt
wrapper/: buffers.hpp  chrono.hpp  pycdfpp.cpp  repr.hpp
