option('with_tests', type : 'boolean', value : false, description : 'Disable tests build.')
option('show_extra_files', type : 'boolean', value : false, description : 'adds dummy lib to show extra files into an IDE.')
option('use_libdeflate', type : 'boolean', value : true, description : 'uses libdeflate instead of libz.')
