option('with_tests', type : 'boolean', value : false, description : 'Disable tests build.')
option('with_benchmarks', type : 'boolean', value : false, description : 'Disable benchmarks build.')
option('show_extra_files', type : 'boolean', value : false, description : 'adds dummy lib to show extra files into an IDE.')
option('use_libdeflate', type : 'boolean', value : true, description : 'uses libdeflate instead of libz.')
option('use_nomap', type : 'boolean', value : true, description : 'uses custom map like implementation.')
option('disable_python_wrapper', type : 'boolean', value : false, description : 'build without Python wrapper.')
option('with_experimental_zstd', type : 'boolean', value : false, description : 'enables experimental zstd compression.')
